[tool.poetry]
name = "lep"
version = "1"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.6"
Flask = {version = "^1.1",extras = ["web"]}

[tool.poetry.dev-dependencies]
ipython = "*"
ipdb = "*"
flake8-black = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
